# wifi_bootloader

./: .gitignore  CMakeLists.txt  README.md  features.md  linker_script.ld
inc/: logger.h  test_binary.h  uart.h  wifi.h
src/: logger.c  main.c  startup.c  uart.c  wifi.c
